--- a/tp-cuatrimestral-equipo15/Master.Master
+++ b/tp-cuatrimestral-equipo15/Master.Master
@@ -2,9 +2,9 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="en" data-bs-theme="Light">
 <head runat="server">
-    <title> Maxi Programa </title>
+    <title>Maxi Programa</title>
     <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
     </asp:ContentPlaceHolder>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,7 +15,7 @@
         <asp:Panel ID="PanelMenu" runat="server">
             <header class="header-container">
                 <nav class="navbar navbar-expand-lg" style="background-color: #7b1fa2">
-                    <div class="m-2" style="width:8%">
+                    <div class="m-2" style="width:200px">
                         <a href="Default.aspx" style="font-size: 20px; text-decoration:none" class="text-white"> Maxi Programa </a>
                     </div>
                     <div class="container-fluid">
@@ -46,7 +46,7 @@
                 </nav>
             </header>
         </asp:Panel>
-        <div class="main-container" style="min-height: 750px">
+        <div class="main-container" >
             <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">
             </asp:ContentPlaceHolder>
         </div>
