--- a/tp-cuatrimestral-equipo15/Master.Master
+++ b/tp-cuatrimestral-equipo15/Master.Master
@@ -28,7 +28,7 @@
                                     <a class="nav-link text-white" href="#">Contacto</a>
                                 </li>
                                  <li class="nav-item m-2">
-                                    <a class="nav-link text-white" href="#">Cursos</a>
+                                    <a class="nav-link text-white" href="MyCourses.aspx">Mis Cursos</a>
                                 </li>
                             </ul>
                             <a href="Login.aspx" class="btn btn-success"> Ingresar </a>
@@ -46,7 +46,7 @@
                 </nav>
             </header>
         </asp:Panel>
-        <div class="main-container" >
+        <div class="main-container" style="min-height: 800px">
             <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">
             </asp:ContentPlaceHolder>
         </div>
