--- a/tp-cuatrimestral-equipo15/Master.Master
+++ b/tp-cuatrimestral-equipo15/Master.Master
@@ -12,7 +12,7 @@
 </head>
 <body>
     <form id="form1" runat="server">
-        <asp:Panel ID="LoginOrRegisterMenuPanel" runat="server" Visible="false">
+        <asp:Panel ID="LoginOrRegisterHeaderPanel" runat="server" Visible="false">
             <header class="header-container">
                 <nav class="navbar navbar-expand-lg d-flex justify-content-center align-items-center" style="background-color: #7b1fa2">
                     <div class="m-2">
@@ -21,7 +21,7 @@
                 </nav>
             </header>
         </asp:Panel>
-        <asp:Panel ID="AdministratorMenuPanel" runat="server" Visible="false">
+        <asp:Panel ID="AdministratorHeaderPanel" runat="server" Visible="false">
             <header class="header-container">
                 <nav class="navbar navbar-expand-lg d-flex justify-content-center align-items-center" style="background-color: #7b1fa2">
                     <div class="m-2">
@@ -31,7 +31,7 @@
                 </nav>
             </header>
         </asp:Panel>
-        <asp:Panel ID="UserMenuPanel" runat="server">
+        <asp:Panel ID="UserHeaderPanel" runat="server">
             <header class="header-container">
                 <nav class="navbar navbar-expand-lg" style="background-color: #7b1fa2">
                     <div class="m-2" style="width:200px">
