--- a/tp-cuatrimestral-equipo15/Master.Master
+++ b/tp-cuatrimestral-equipo15/Master.Master
@@ -18,7 +18,7 @@
             <header class="header-container">
                 <nav class="navbar navbar-expand-lg d-flex justify-content-center align-items-center" style="background-color: #7b1fa2">
                     <div class="m-2">
-                        <a href="Default.aspx" style="font-size: 30px; text-decoration:none" class="text-white"> Maxi Programa </a>
+                        <a href="#" style="font-size: 30px; text-decoration:none" class="text-white"> Maxi Programa </a>
                     </div>
                 </nav>
             </header>
